<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu">
        <menu>
            <item android:title="@string/asteroid_locator"
                android:id="@+id/to_asteroid_locator"
                />
            <item android:title="@string/graph_asteroid_locator"
                android:id="@+id/to_grap_asteroid_locator"
                />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item android:title="@string/setting"
                android:id="@+id/setting"
                />
            <item android:title="@string/about_app"
                android:id="@+id/about_app"
                />
        </menu>
    </item>
</menu>

